printers: make sure the printer job state_string is initialized

https://bugzilla.gnome.org/show_bug.cgi?id=762630